--- a/Airbnb/css/main.css
+++ b/Airbnb/css/main.css
@@ -1,192 +1,196 @@
-body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-/* #logo {
-    width: 80px;
-    height: 64px;
+#logo {
+    height: 50px;
+    opacity: 0.3;
     position: absolute;
-    float: left;
-} */
-header{
-    background-image: url(https://a0.muscache.com/4ea/air/r:w775-h300-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg);
-    background-size:cover;
-    width: 100%;
-    height: 650px;
-    vertical-align: middle !important;
-    
-}
-.head{
-    position: absolute;
-    top: 80px;
-    left: 100px;
-    background-color: white;
-    padding:32px;
-    border-radius: 4px;
-    width: 500px;
-    
-
-}
-.head h2{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 32px;
-    font-weight: 700px;
-    line-height: 36px;
-    color: #484848;
-}
-.title p{
-    font-size: 18px;
-    line-height: 26px;
-    
-}
-form span{
-    font-size: 12px;
-    line-height: 16px;
-    letter-spacing: 1px;
-    font-weight: 700;
-}
-form p{
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 18px;
-    letter-spacing: 1px;
-}
-form input{
-    font-weight: 600;
-    line-height: 24px;
-    padding: 8px;
-    width: 90%;
-    border-radius: 4px;
-    border: 0.5px solid #d1d1d1;
-    margin-bottom: 20px;
-}
-form select{
-    font-weight: 600;
-    line-height: 24px;
-    padding: 8px;
-    width: 90%;
-    border-radius: 4px;
-    border: 0.5px solid #d1d1d1;
-    margin-bottom: 20px;
-
-}
-
-.checkin{
-    width: 48%;
+    padding: 20px 0px 0px 20px;
     float: left;
 }
-.checkout{
-    width: 48%;
-    float: left;
+header {
+  background-image: url(
+    https://a0.muscache.com/4ea/air/r:w775-h300-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg
+  );
+  background-size: cover;
+  width: 100%;
+  height: 650px;
+  vertical-align: middle !important;
 }
-.adult{
-    width: 50%;
-    float: left;
+.head {
+  position: absolute;
+  top: 80px;
+  left: 100px;
+  background-color: white;
+  padding: 32px;
+  border-radius: 4px;
+  width: 500px;
 }
-.children{
-    width: 50%;
-    float: left;
+.head h2 {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 32px;
+  font-weight: 700px;
+  line-height: 36px;
+  color: #484848;
+}
+.title p {
+  font-size: 18px;
+  line-height: 26px;
+}
+form span {
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 1px;
+  font-weight: 700;
+}
+form p {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 18px;
+  letter-spacing: 1px;
+}
+form input {
+  font-weight: 600;
+  line-height: 24px;
+  padding: 8px;
+  width: 90%;
+  border-radius: 4px;
+  border: 0.5px solid #d1d1d1;
+  margin-bottom: 20px;
+}
+form select {
+  font-weight: 600;
+  line-height: 24px;
+  padding: 8px;
+  width: 90%;
+  border-radius: 4px;
+  border: 0.5px solid #d1d1d1;
+  margin-bottom: 20px;
 }
 
-form button{
-    border: 0px;
-    border-radius: 4px;
-    background-color: #FF5A5F;
-    color: white;
-    width: 95%;
-    font-weight: 800;
-    padding: 10px 22px;
+.checkin {
+  width: 48%;
+  float: left;
+}
+.checkout {
+  width: 48%;
+  float: left;
+}
+.adult {
+  width: 50%;
+  float: left;
+}
+.children {
+  width: 50%;
+  float: left;
+}
+
+form button {
+  border: 0px;
+  border-radius: 4px;
+  background-color: #ff5a5f;
+  color: white;
+  width: 95%;
+  font-weight: 800;
+  padding: 10px 22px;
+  text-align: center;
+  line-height: 24px;
+  font-size: 16px;
+}
+.review {
+  width: 70%;
+  margin: auto;
+  padding: 48px 24px 0px;
+}
+.review h2 {
+  font-size: 24px;
+  font-weight: 800px;
+  line-height: 30px;
+  color: #484848;
+}
+.comment {
+  line-height: 22px;
+}
+.comment img {
+  margin-right: 10px;
+  font-size: 14px;
+  line-height: 18px;
+}
+.col-md span{
+  
+  float: left;
+  
+}
+.info img {
+  width: 50px;
+  height: 50px;
+  font-size: 14px;
+  line-height: 15px;
+  border-radius: 50%;
+  float: left;
+}
+.thumbnail img {
+    max-width: 100%;
+    display: block;
+    height: auto;
+}
+.name {
+  float: left;
+  margin-left: 10px;
+  
+}
+.rating{
+  height: 100px;
+}
+.rating p{
+  float: left;
+  height: 100px;
+  font-size: 14px;
+}
+
+@media only screen and (min-width: 1128px) {
+  .container {
+    /* overflow: auto;
+    white-space: nowrap; */
+  }
+  .col-md {
+    max-width: 100%;
+    display: block;
     text-align: center;
-    line-height: 24px;
-    font-size: 16px;
-    
-}
-.review{
-    width: 70%;
-    margin: auto;
-    padding: 48px 24px 0px;
-}
-.review h2{
-    font-size: 24px;
-    font-weight: 800px;
-    line-height: 30px;
-    color: #484848;
-}
-.comment{
-    line-height: 22px;
-}
-.comment img{
-    margin-right: 10px;
-    font-size: 14px;
-    line-height: 18px;
-}
-.col-md-4{
-    padding: 1em;
-}
-.thumbnail img{
-    width: 333px;
-}
-.info{
-    margin-top:20px;
-    
-}
-.info img{
-    width: 50px;
-    height: 50px;;
-    font-size: 14px;
-    line-height: 15px;
-    border-radius: 50%;
-    
-}
-.thumbnail img{
-    padding-top: 56.25%
-}
-.name{
-    width: 60%;
-    float: right;
-    margin-left: 10px;
-}
-
-@media only screen and (max-width: 1128px) {
-.container{
-    overflow: auto;
-    white-space: nowrap;
-}
-.col-md-4{
-        
-        display: inline-block;
-        text-align: center;
-        
-        text-decoration: none;
-}
-}
-@media only screen and (max-width: 744px) {
-    
-    .head{
-
+    text-decoration: none;
+    height: auto;
+  }
+  .thumbnail img{
     width: 100%;
-    bottom: 0px;
+  }
+  .col-md p{
+    max-width: 100%;
+    display: block;
+    
+    
+  }
+}
+@media only screen and (max-width: 768px) {
+  .head {
+    width: 100%;
     left: 0px;
     background: none;
     padding: 0px;
     height: 100%;
-    
-    
-    }
-    .head form{
-        background-color: white;
-        padding: 50px 32px;
-        margin-bottom: 0px;
-        height: 62%;
-        
-    }
-    .head h2{
-        color: white;
-        padding:20px;
-
-    }
-    .title p{
-        
-        visibility:hidden;
-    }
-    
   }
+  .head form {
+    background-color: white;
+    padding: 20px 32px;
+    margin-bottom: 0px;
+    height: 62%;
+  }
+  .head h2 {
+    color: white;
+    padding: 20px;
+  }
+  .title p {
+    visibility: hidden;
+  }
+}
