--- a/boostrap/style.css
+++ b/boostrap/style.css
@@ -1,57 +1,58 @@
-body{
-    font-family: 'Roboto'
+body {
+  font-family: "Roboto";
 }
-header{
-    background-image: url("bgr.jpg");
-    
-    height:500px;
-    margin-bottom: 30px;
+header {
+  background-image: url("bgr.jpg");
+
+  height: 500px;
+  margin-bottom: 30px;
 }
 
-header p{
-    color: white;
+header p {
+  color: white;
 }
-header p:first-child{
-    font-size: 100px;
-    
+header p:first-child {
+  font-size: 100px;
 }
-.logo{
-    position: absolute;
-    top: 100px;
-    left: 300px;
+.logo {
+  width: 35%;
+  position: absolute;
+  top: 100px;
+  left: 300px;
 }
-nav{
-    margin-bottom: 30px;
+nav {
+  margin-bottom: 30px;
 }
-nav li{
-    display: inline;
-    list-style: none;
-    text-align: center;
-    font-size: 19px;
-    margin: 0px 20px;
+nav li {
+  display: inline;
+  list-style: none;
+  text-align: center;
+  font-size: 19px;
+  margin: 0px 20px;
 }
-nav a{
-    text-decoration: none;
-    color: black;
+nav a {
+  text-decoration: none;
+  color: black;
 }
-nav a:hover{
-    color: gold;
+nav a:hover {
+  color: gold;
 }
-nav ul{
-    width: 50%;
-    margin: auto;
-    text-align: center;
-    
+nav ul {
+  width: 50%;
+  margin: auto;
+  text-align: center;
 }
 
-
-section img{
-    width: 383px;
-    height: 249px;
-    padding: 5px;
+section img {
+  
+  height: 249px;
+  
+}
+.col{
+    width: 33%
 }
 @media screen and (max-width: 992px) {
-    .col-md-4{
-        width: 33.33%;
-    }
+  .col-md-4 {
+    width: 50%;
+  }
 }
