--- a/renovation/src/views/components/portfolio/portfolio.scss
+++ b/renovation/src/views/components/portfolio/portfolio.scss
@@ -114,7 +114,7 @@
                 position: absolute;
                 left: 0px;
                 top: 0px;
-                max-width: 100%;
+                // max-width: 100%;
                 height: 100%;
                 z-index: 1;
                 opacity: 0;
@@ -140,7 +140,7 @@
     }
     .portfolio_text {
         position: absolute;
-        z-index: 100;
+        z-index: 3;
         top: 15px;
         bottom: 0;
         left: 0;
